[gd_scene format=3 uid="uid://7fkoqmdrpsbl"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_pqhw6"]
[ext_resource type="Texture2D" uid="uid://ctbtohd2qh2dn" path="res://Sprites/Inimigo/Inimigos.png" id="2_pqhw6"]
[ext_resource type="Texture2D" uid="uid://fhf6djwidmtu" path="res://Sprites/Inimigo/Inimigo_atk.png" id="2_x8e4v"]
[ext_resource type="Texture2D" uid="uid://dtxostmngphml" path="res://Sprites/Inimigo/Inimigo_damage.png" id="3_rrp0o"]
[ext_resource type="Texture2D" uid="uid://bu7vt26mm7clm" path="res://Sprites/Inimigo/Inimigos_walk.png" id="5_jq0pf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c8u6y"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_68dbu"]
atlas = ExtResource("2_x8e4v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f71c5"]
atlas = ExtResource("2_x8e4v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adrne"]
atlas = ExtResource("2_x8e4v")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ku5l"]
atlas = ExtResource("2_x8e4v")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hijg5"]
atlas = ExtResource("3_rrp0o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4nis"]
atlas = ExtResource("2_pqhw6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvc0s"]
atlas = ExtResource("2_pqhw6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8e4v"]
atlas = ExtResource("2_pqhw6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0e0p"]
atlas = ExtResource("2_pqhw6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfp2m"]
atlas = ExtResource("2_pqhw6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae2me"]
atlas = ExtResource("5_jq0pf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp52m"]
atlas = ExtResource("5_jq0pf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5aq6"]
atlas = ExtResource("5_jq0pf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_od71d"]
atlas = ExtResource("5_jq0pf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjq3p"]
atlas = ExtResource("5_jq0pf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jq0pf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68dbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f71c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adrne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ku5l")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hijg5")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4nis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvc0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8e4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0e0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfp2m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae2me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp52m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5aq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od71d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjq3p")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqhw6"]
size = Vector2(17, 29)

[node name="enemy" type="CharacterBody2D" unique_id=199663345]
scale = Vector2(1.02, 1)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_pqhw6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1796206004]
shape = SubResource("CapsuleShape2D_c8u6y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1025154291]
position = Vector2(1, 0)
scale = Vector2(1.1679683, 1.2499999)
sprite_frames = SubResource("SpriteFrames_jq0pf")
animation = &"attack"
autoplay = "idle"

[node name="hitbox" type="Area2D" parent="." unique_id=1713495501]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" unique_id=6759685]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_pqhw6")
debug_color = Color(1, 0.015659437, 0.026709871, 0.41960785)

[node name="WallDetector" type="RayCast2D" parent="." unique_id=341624885]
position = Vector2(0, 10)
target_position = Vector2(-25.490196, 0)

[node name="GroundDetector" type="RayCast2D" parent="." unique_id=397485523]
position = Vector2(-14.705883, 0)
target_position = Vector2(0, 21)

[node name="PlayerDetector" type="RayCast2D" parent="." unique_id=279852411]
target_position = Vector2(-83.333336, 0)
collision_mask = 2

[node name="FireStartPosition" type="Node2D" parent="." unique_id=1209664401]
position = Vector2(-14.705882, 7)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
